# RecipeCards

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.7.1.md  RELEASE_NOTES_v1.7.2.md  hacs.json  pyproject.toml  pyrightconfig.json  pytest.ini
custom_components/recipecards/: __init__.py  api.py  config_flow.py  const.py  manifest.json  models.py  sensor.py  services.py  services.yaml  storage.py
custom_components/recipecards/translations/: en.json  services.en.json
custom_components/recipecards/www/: recipecards-card.js
recipecards-card/: README.md  package-lock.json  package.json  tsconfig.json  web-test-runner.config.js
recipecards-card/src/: recipecards-card.ts
recipecards-card/test/: recipecards-card.test.ts  run-tests.js
tests/recipecards/: test_api.py  test_integration.py  test_models.py  test_services.py  test_storage.py
